# jiminy

./: Cargo.toml  LICENSE  README.md
src/: conditions.rs  error.rs  form.rs  game.rs  lib.rs  model.rs  player.rs  rating.rs  sim.rs  team.rs
src/game/: stats.rs
src/model/: alpha.rs  naive_stats.rs  null.rs
src/sim/: model.rs
