[package]
name = "jiminy"
version = "0.1.0"
authors = ["Felix Clark <mfclark3690@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: consider supporting yaml
# serde_yaml = "0.8"
